# Deepblue

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: build.yml
deepblue.lv2/: Abyss.ttl  CathedralOfWhales.ttl  Champagne.ttl  DeepCurrent.ttl  DiversBubbles.ttl  Geyser.ttl  GlacialDrift.ttl  KelpForest.ttl  Mariana.ttl  Riptide.ttl  Shallows.ttl  SonarPing.ttl  SubmergedCathedral.ttl  SurfaceTension.ttl  TidePool.ttl  deepblue.ttl  manifest.ttl  modgui.ttl
deepblue.lv2/modgui/: icon-deepblue.html  script-deepblue.js  stylesheet-deepblue.css
juce/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
plugins/package/deepblue/: deepblue.mk
src/: biquad.hpp  bubbles.hpp  deepblue_dsp.cpp  deepblue_dsp.h  delayline.hpp  dispersion.hpp  lfo.hpp  plugin.cpp  reverb.hpp  stereofield.hpp
